--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	compile group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.2'
 
 	compile "io.swagger:swagger-java-client:1.0.0"
+	compile 'org.springframework.boot:spring-boot-starter-webflux'
+    compile 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
 }
 
 test {
